--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Juan Ortiz</title>
+    <meta
+    name="description"           
+    content="Software enginner specialized in frontend web development. 
+    Enthusiastic about Computer Graphics, VR/AR and Game Development.">
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <meta name="theme-color" content="#1976d2" />
   </head>
   <body>
     <!-- Github Pages hack to allow SPA refresh without receiving 404. -->
