--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Juan Ortiz</title>
+    <title>Miguel Ortiz</title>
     <meta
-    name="description"           
-    content="Software enginner specialized in frontend web development. 
-    Enthusiastic about Computer Graphics, VR/AR and Game Development.">
+      name="description"
+      content="Ingeniero Civil con especialización en diseño arquitectónico y 
+      planificación de espacios. Apasionado por la innovación en tecnología de construcción 
+      y desarrollo de proyectos de urbanismo."
+    />
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
